--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,6 +18,7 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel = "stylesheet" href = "styles/pixapp.css"> 
     <!-- endbuild -->
   </head>
   <body ng-app="followboardApp">
@@ -60,8 +61,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
-        <!-- <script src="scripts/controllers/followboard.js"></script> -->
         <script src="scripts/controllers/followboard.js"></script>
+        <script src="scripts/controllers/pixapp.js"></script>
         <!-- endbuild -->
 </body>
 </html>
